--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "matt-tools",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "./dist/bundle.js",
   "scripts": {
@@ -8,7 +8,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "matt-tools"
+    "matt-tools",
+    "countDown",
+    "debounce",
+    "throttle"
   ],
   "author": "",
   "license": "ISC",
